# rembg_gui_rust

./: .gitignore  Cargo.toml  README.md  konversi.bat
src/: main.rs
